Minor improvement of the building